shill: Remove SHILL_TEST_DEVICE
It was only referenced by 100setupTestingInterface script previously,
which was removed in https://crrev.com/c/5323941.

BUG=b:324967645
TEST=CQ

Change-Id: I9659ac5e0b3564bcf5caa08899413d67468a3b89
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5358893
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>

--- a/shill/init/shill.service.in
+++ b/shill/init/shill.service.in
@@ -12,8 +12,7 @@ Conflicts=pre-shutdown.service
 # Default parameters to be overridden by systemd configuration.
 Environment="SHILL_LOG_LEVEL=0" \
 	"SHILL_LOG_SCOPES=" \
-	"BLOCKED_DEVICES=" \
-	"SHILL_TEST_DEVICES="
+	"BLOCKED_DEVICES="
 Restart=on-failure
 
 ExecStartPre=/bin/sh /usr/share/cros/init/shill-pre-start.sh
