crosier-chrome: enable ChromeOS cq run for all other stable Crosier tests.
BUG=b:294097177
TEST=CQ

Change-Id: Ie084ef80783858c64e758e399937c78528df509b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5360393
Reviewed-by: Azizur Rahman <azrahman@google.com>
Commit-Queue: Azizur Rahman <azrahman@google.com>
Commit-Queue: Alex Bergman <abergman@google.com>
Tested-by: Alex Bergman <abergman@google.com>

--- a/crosier-chrome/test_metadata/featured_integration_test.yaml
+++ b/crosier-chrome/test_metadata/featured_integration_test.yaml
@@ -18,11 +18,11 @@ criteria: |
   Verifies features are enabled/disabled as expected and parameters are unchanged
 cases:
   - id: "FeatureLibraryLateBoot/experiment_default"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "FeatureLibraryLateBoot/experiment_disabled_without_params"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "FeatureLibraryLateBoot/experiment_enabled_with_params"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "FeatureLibraryLateBoot/experiment_enabled_without_params"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
