--- a/crosier-chrome/test_metadata/lock_screen_integration_test.yaml
+++ b/crosier-chrome/test_metadata/lock_screen_integration_test.yaml
@@ -20,7 +20,7 @@ criteria: |
   tested separately in the CloseLidPref test below.
 cases:
   - id: "CloseLidDbusIntegration"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "CloseLidPref"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
