--- a/crosier-chrome/test_metadata/multi_page_scan_integration_test.yaml
+++ b/crosier-chrome/test_metadata/multi_page_scan_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Perform a multi page scan and verify that the scan was performed successfully.
 cases:
   - id: "MultiPageScan"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
