--- a/crosier-chrome/test_metadata/smart_dim_integration_test.yaml
+++ b/crosier-chrome/test_metadata/smart_dim_integration_test.yaml
@@ -17,5 +17,5 @@ criteria: |
   ML Service for a decision about whether to dim the screen
 cases:
   - id: "SmartDim"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
