--- a/crosier-chrome/test_metadata/featured_late_platform_integration_test.yaml
+++ b/crosier-chrome/test_metadata/featured_late_platform_integration_test.yaml
@@ -18,11 +18,11 @@ criteria: |
   Verifies features are enabled/disabled as expected and parameters are unchanged
 cases:
   - id: "LatePlatformFeatures/0"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "LatePlatformFeatures/1"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "LatePlatformFeatures/2"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "LatePlatformFeatures/3"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
