--- a/crosier-chrome/test_metadata/ml_integration_test.yaml
+++ b/crosier-chrome/test_metadata/ml_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Test that the ml-service daemon can be started and an ML model can be loaded
 cases:
   - id: "Bootstrap"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
