--- a/crosier-chrome/test_metadata/scan_integration_test.yaml
+++ b/crosier-chrome/test_metadata/scan_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Perform a scan and verify the expected output using a golden file
 cases:
   - id: "ScanWithDefaultSettings"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
