--- a/crosier-chrome/test_metadata/screenshot_integration_test.yaml
+++ b/crosier-chrome/test_metadata/screenshot_integration_test.yaml
@@ -17,7 +17,7 @@ criteria: |
   Takes a screenshot and validates its average color
 cases:
   - id: "AverageColor/0"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
   - id: "AverageColor/1"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
