--- a/crosier-chrome/test_metadata/security_files_integration_test.yaml
+++ b/crosier-chrome/test_metadata/security_files_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Checks ownership and permissions of user files for logged-in users
 cases:
   - id: "UserFilesLoggedIn"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
