--- a/crosier-chrome/test_metadata/shelf_integration_test.yaml
+++ b/crosier-chrome/test_metadata/shelf_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Integration test that opens and closes ChromeOS app shelf.
 cases:
   - id: "OpenCloseSwitchApps"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
