--- a/crosier-chrome/test_metadata/terminal_integration_test.yaml
+++ b/crosier-chrome/test_metadata/terminal_integration_test.yaml
@@ -17,5 +17,5 @@ criteria: |
   Sends the given text to the element as individual key press commands
 cases:
   - id: "Crosh"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
