--- a/crosier-chrome/test_metadata/web_handwriting_integration_test.yaml
+++ b/crosier-chrome/test_metadata/web_handwriting_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Navigate to the appropriate test page, based on whether handwriting recognition is supported or not
 cases:
   - id: "Recognition"
-    tags: ["crosier:crosierdemosuite"]
+    tags: ["crosier:crosierdemosuite", "crosier:cq"]
 ...
