crosh: write to eventfd on shell window resize
The --isolated crosh shell needs this to handle resize events.

BUG=b:330373462
TEST=run `shell --isolated`, run `top` and resize the window

Change-Id: I2de29f6e2414f5432bcf35bb5dcc21b51785ff2c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5383371
Tested-by: Ben Scarlato <akhna@google.com>
Auto-Submit: Ben Scarlato <akhna@google.com>
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: Ben Scarlato <akhna@google.com>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Commit-Queue: Allen Webb <allenwebb@google.com>

--- a/crosh/Cargo.toml
+++ b/crosh/Cargo.toml
@@ -30,6 +30,7 @@ regex = "1.0.6"
 rustyline = "9.1.1"
 metrics_rs = { path = "../metrics/rust-client" } # provided by ebuild
 shell-words = "1.0.0"
+signal-hook-registry = "*"
 system_api = { path = "../system_api" } # provided by ebuild
 textwrap = "0.11.0"
 tlsdate_dbus = { path = "../../third_party/tlsdate" } # provided by ebuild
