metrics: memd: Use system_api
Generate the metrics_event protobuf code in system_api instead of in
memd.

BUG=b:273672971
TEST=cargo test

Change-Id: I47decd289a8c8f358e1f0696dd104f483c2a6a58
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5360436
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Vovo Yang <vovoy@chromium.org>
Tested-by: Vovo Yang <vovoy@chromium.org>
Reviewed-by: Miriam Zimmerman <mutexlox@chromium.org>

--- a/metrics/memd/Cargo.toml
+++ b/metrics/memd/Cargo.toml
@@ -2,7 +2,6 @@
 name = "memd"
 version = "0.1.0"
 authors = ["The ChromiumOS Authors"]
-build = "build.rs"
 include = ["Cargo.toml", "*.rs", "src/**/*"]
 edition = "2021"
 
@@ -17,6 +16,7 @@ nix = "0.26"
 procfs = "0.15"
 protobuf = "3.2"
 syslog = "6.0.1"
+system_api = { path = "../../system_api" } # provided by ebuild
 tempfile = "3.0"
 time = "0.3"
 
