cryptohome: Add GetPinWeaverInfo API
This API can be used to check whether there is any PinWeaver credential
present on the device.

This is introduced to let hiberman check whether it can enable
hibernation (because hibernation is currently not compatible with
PinWeaver mechanism), but it can potentially be used for other scenarios
as well.

BUG=b:329020956
TEST=cryptohome unittests

Change-Id: I983dd762715f31c49d1c88506aea1eceb942f9cb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5358898
Reviewed-by: Yi Chou <yich@google.com>
Reviewed-by: John Admanski <jadmanski@chromium.org>
Commit-Queue: Howard Yang <hcyang@google.com>
Tested-by: Howard Yang <hcyang@google.com>

--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -242,6 +242,9 @@
     <allow send_destination="org.chromium.UserDataAuth"
            send_interface="org.chromium.UserDataAuthInterface"
            send_member="GetEncryptionInfo"/>
+    <allow send_destination="org.chromium.UserDataAuth"
+           send_interface="org.chromium.CryptohomeMiscInterface"
+           send_member="GetPinWeaverInfo"/>
   </policy>
 
   <policy user="debugd">
