camera: Fix build dependency for super-res
Update build dependency as a follow-up work for crrev/c/5360774.

BUG=b:329023467, b:316252303
TEST=USE="-dlc" emerge and deploy cros-camera cros-camera-libs

Change-Id: I52f0879bed550dd0e093ca068af89a54f6446a0e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5360775
Commit-Queue: Juliana Chang <julianachang@chromium.org>
Auto-Submit: Juliana Chang <julianachang@chromium.org>
Tested-by: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -321,7 +321,6 @@ source_set("stream_manipulator") {
 
   deps = [
     ":jpeg",
-    "//camera/features/super_resolution",
     "//camera/gpu:gpu_resources",
   ]
   if (use.camera_feature_auto_framing) {
@@ -341,6 +340,9 @@ source_set("stream_manipulator") {
   }
   if (use.camera_feature_portrait_mode) {
     deps += [ "//camera/features/portrait_mode" ]
+  }
+  if (use.dlc) {
+    deps += [ "//camera/features/super_resolution" ]
   }
 }
 
