init: chromeos-cleanup-logs is an executable
Fix access right to /usr/sbin/chromeos-cleanup-logs, an executable.

Fixes: commit 86b813e37e ("init: Add install targets")

BUG=b:40171717, b:329008389
TEST=emerge chromeos-init, check
/build/$BOARD/usr/sbin/chromeos-cleanup-logs is an executable.
Check other install target for potential errors.

Change-Id: Ic517771cfc273402e77cf82fbb69ef09e51f0be6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5361023
Auto-Submit: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Zhengping Jiang <jiangzp@google.com>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Zhengping Jiang <jiangzp@google.com>
Reviewed-by: Brian Norris <briannorris@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -238,6 +238,7 @@ if (use.syslog) {
   install_config("install_chromeos-cleanup-logs") {
     sources = [ "chromeos-cleanup-logs" ]
     install_path = "sbin"
+    type = "executable"
   }
 
   install_config("install_rsyslog") {
