fbpreprocessor: apply seccomp policy
Add seccomp policy for brya and apply the filter in minijail0 upstart
configuration.

BUG=b:308219586
TEST=cros_sdk emerge-${BOARD} fbpreprocessord && \
  cros deploy localhost:2300 fbpreprocessord
TEST=go/fbpreprocessord-seccomp for manual end-to-end tests
TEST=crash.ValidateFirmwareDumpGeneration* pass and fbpreprocessord is
  not killed after test:
(chroot) tast run localhost:2300 crash.ValidateFirmwareDumpGeneration*
(DUT) Check log at: cat /var/log/messages | grep preprocessor | less
(DUT) No "type=SECCOMP" items generated under /var/log/audit/audit.log

Change-Id: I25b2cef19e0895ae760218514ee67cc87d18fb51
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5362720
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Tested-by: Yichen Yu <yichenyu@chromium.org>
Commit-Queue: Yichen Yu <yichenyu@chromium.org>

--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -12,6 +12,7 @@ group("all") {
     ":fbpreprocessord",
     ":install_dbus_config",
     ":install_init",
+    ":install_seccomp_policy",
     ":install_tmpfiles_config",
     ":libfbpreprocessord",
   ]
@@ -78,6 +79,12 @@ executable("fbpreprocessord") {
 install_config("install_init") {
   sources = [ "init/fbpreprocessord.conf" ]
   install_path = "upstart"
+}
+
+install_config("install_seccomp_policy") {
+  sources = [ "seccomp/fbpreprocessord-" + getenv("ARCH") + ".policy" ]
+  install_path = "seccomp_policy"
+  outputs = [ "fbpreprocessord.policy" ]
 }
 
 install_config("install_tmpfiles_config") {
