--- a/fbpreprocessor/init/fbpreprocessord.conf
+++ b/fbpreprocessor/init/fbpreprocessord.conf
@@ -48,6 +48,7 @@ import LOG_LEVEL
 # - Inherit supplementary groups from user fbpreprocessor.
 # - Grant no caps.
 # - No new privileges (no_new_privs).
+# - Apply seccomp filters.
 # - Execute the daemon.
 # - Set the log level.
 # - Pipe output to fbpreprocessord.out.
@@ -72,6 +73,7 @@ exec minijail0                                                               \
   -G                                                                         \
   -c 0                                                                       \
   -n                                                                         \
+  -S /usr/share/policy/fbpreprocessord.policy                                \
   -- /usr/bin/fbpreprocessord                                                \
   --log_level=${LOG_LEVEL}                                                   \
   --file_expiration=${FILE_EXPIRATION_SECS}
