verity: Implement colocated dm-verity image verification
.. this enables validation of colocated dm-verity data and hash images.
Provide comprehensive test coverage to prevent future discrepancies or
unauthorized modifications.

CrOS table:
```
betty ~ # verity --payload=payload.img --mode=verify --table="0 1024 verity payload=ROOT_DEV hashtree=HASH_DEV hashstart=1024 alg=sha256 root_hexdigest=adbfb339bb2ed44ff90a5e7c411ce3c7390a398f160ef0cf772f6555d65c4d6b salt=313a1ec125d751490e21c4b7a2af18cffc39cc510e3d1882a6687789721d24a0"
betty ~ # echo $?
0

betty ~ # verity --payload=payload_bad.img --mode=verify --table="0 1024 verity payload=ROOT_DEV hashtree=HASH_DEV hashstart=1024 alg=sha256 root_hexdigest=adbfb339bb2ed44ff90a5e7c411ce3c7390a398f160ef0cf772f6555d65c4d6b salt=313a1ec125d751490e21c4b7a2af18cffc39cc510e3d1882a6687789721d24a0"
ERROR verity: [verity_action.cc(144)] Final payload mismatch, did you forget to append the hashtree fully?
betty ~ # verity --payload=payload.img --mode=verify --table="0 1024 verity payload=ROOT_DEV hashtree=HASH_DEV hashstart=1024 alg=sha256 root_hexdigest=adbfb339bb2ed44ff90a5e7c411ce3c7390a398f160ef0cf772f6555d65c4d6b"
ERROR verity: [verity_action.cc(128)] Tables are not the same.
betty ~ # verity --payload=payload.img --mode=verify --table="0 2048 verity payload=ROOT_DEV hashtree=HASH_DEV hashstart=1024 alg=sha256 root_hexdigest=adbfb339bb2ed44ff90a5e7c411ce3c7390a398f160ef0cf772f6555d65c4d6b salt=313a1ec125d751490e21c4b7a2af18cffc39cc510e3d1882a6687789721d24a1"
ERROR verity: [verity_action.cc(41)] Payload size is invalid based on table, too small.
ERROR verity: [verity_action.cc(83)] Failed to pre-verify payload.
betty ~ # verity --payload=payload.img --mode=verify --table="0 1024 verity payload=ROOT_DEV hashtree=HASH_DEV hashstart=1024 alg=sha256 root_hexdigest=adbfb339bb2ed44ff90a5e7c411ce3c7390a398f160ef0cf772f6555d65c4d6b salt=313a1ec125d751490e21c4b7a2af18cffc39cc510e3d1882a6687789721d24a1"
ERROR verity: [verity_action.cc(128

--- a/verity/BUILD.gn
+++ b/verity/BUILD.gn
@@ -39,6 +39,7 @@ shared_library("libdm-bht") {
     "dm_verity_table.cc",
     "file_hasher.cc",
     "hasher.cc",
+    "verity_action.cc",
     "verity_mode.cc",
   ]
   install_path = "lib"
@@ -63,6 +64,7 @@ install_config("install_headers") {
     "dm-bht.h",
     "dm_verity_table.h",
     "file_hasher.h",
+    "verity_action.h",
     "verity_mode.h",
   ]
   install_path = "/usr/include/verity"
@@ -98,6 +100,7 @@ if (use.test) {
       "dm-bht_test.cc",
       "dm_verity_table_test.cc",
       "file_hasher_test.cc",
+      "verity_action_test.cc",
       "verity_mode_test.cc",
     ]
     configs += [
