--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -867,14 +867,14 @@ thinpool_migrator=\
   tail -n 100 /tmp/vgcfgrestore.txt; \
   echo EOF
 
-# Hibernate related logs. Only collect the hiberman logs when the
-# binary exists. The command can be invoked on systems without
-# hibernate support. The dmesg output is still desirable in this
-# case.
+# Hibernate related logs. Only collect the system logs when the
+# hiberman binary exists. The command can be invoked on systems
+# without hibernate support. The dmesg output is still desirable
+# in that case.
 hiberman=\
   if [ -e /usr/sbin/hiberman ]; then \
-    echo "===syslog (hiberman)==="; \
-    croslog --boot --identifier=hiberman; \
+    echo "===syslog==="; \
+    croslog --boot | tail -n 100; \
   fi; \
   echo "===dmesg==="; \
   dmesg | tail -n 100; \
