swap_management: Migrate memory metrics from chromium
Migrate the psi and zram metrics reporter from chromium to
swap_management.

BUG=b:328297073
TEST=chrome://histograms

Change-Id: Ie28922ace2b3cf199b91493cf0d2e80dc775e19a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5357733
Reviewed-by: Brian Geffon <bgeffon@chromium.org>
Tested-by: Chun-Tse Shao <ctshao@google.com>
Commit-Queue: Chun-Tse Shao <ctshao@google.com>

--- a/swap_management/BUILD.gn
+++ b/swap_management/BUILD.gn
@@ -103,6 +103,7 @@ if (use.test) {
   }
   executable("test") {
     sources = [
+      "metrics_test.cc",
       "swap_tool_test.cc",
       "zram_recompression_test.cc",
       "zram_stats_test.cc",
