vm_tools: Remove use.vm_sludge.
BUG=b:319045572
BUG=b:330597536
TEST=cq

Cq-Depend: chromium:5366462, chrome-internal:7062638
Change-Id: Ic41cd5e307cf4677e6d6a2fd0ec7e14e367714cd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5367433
Tested-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: ChromeOS Auto Retry <chromeos-auto-retry@chromeos-bot.iam.gserviceaccount.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/vm_tools/guest/BUILD.gn
+++ b/vm_tools/guest/BUILD.gn
@@ -55,10 +55,7 @@ static_library("libmaitred") {
     "../maitred/service_impl.cc",
   ]
   configs += [ ":target_defaults" ]
-  defines = [
-    "USE_VM_BOREALIS=${use.vm_borealis}",
-    "USE_VM_SLUDGE=${use.vm_sludge}",
-  ]
+  defines = [ "USE_VM_BOREALIS=${use.vm_borealis}" ]
   pkg_deps = [
     "grpc++",
     "libbrillo",
