camera: Update sandboxing rules and bind mount libsegementation
Update policy to fix sandboxing errors for super-res feature.

The /run/libsegmenation is needed by libsegmentation library at first
boot to query the feature level.

BUG=b:316252303
TEST=test zoomed capture in sandbox and check the audit logs

Change-Id: I065402e20872b058892e708c7421a3e31951ea78
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5367047
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>
Tested-by: Juliana Chang <julianachang@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Juliana Chang <julianachang@chromium.org>

--- a/camera/hal_adapter/init/cros-camera.conf
+++ b/camera/hal_adapter/init/cros-camera.conf
@@ -81,6 +81,7 @@ end script
 # Need access to /var/lib/timezone to read correct timezone.
 # Need access to /var/lib/ml_core/opencl_cache to read effects opencl cache.
 # Need read access to /run/chromeos-config/v1 for access to chromeos-config.
+# Need read access to /run/libsegmentation to use libsegmentation library.
 # Need (executable) access to /run/imageloader to read DLC.
 # Need (writable) access to /dev/shm to share memory with Android.
 # Need (writable) access to /var/lib/metrics to log metrics.
@@ -95,6 +96,7 @@ exec minijail0 -i -u arc-camera -g arc-camera -G \
     -b /var/lib/ml_core/opencl_cache \
     -k 'tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' \
     -k '/run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV' \
+    -b /run/libsegmentation \
     -b /run/perfetto,,1 -b /run/camera,,1 -b "${SERVER_TOKEN_DIR}" \
     -b /run/udev/data -b /run/chromeos-config/v1 \
     -b "${CAMERA_LIBFS_PATH}" \
