heartd: Update binary tool install path
The path here is wrong and should be fixed to /usr/local/bin.

BUG=none
TEST=tast run $IP heartd.RunAction.sync_data

Change-Id: I678af30aba3200ed5050c5a1570baf180a228b42
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5368774
Commit-Queue: Byron Lee <byronlee@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>
Auto-Submit: Kerker Yang <kerker@chromium.org>
Commit-Queue: Kerker Yang <kerker@chromium.org>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/heartd/tools/BUILD.gn
+++ b/heartd/tools/BUILD.gn
@@ -11,7 +11,7 @@ group("all") {
 
 executable("heartd-tool") {
   sources = [ "heartd_tool.cc" ]
-  install_path = "bin"
+  install_path = "/usr/local/bin"
   pkg_deps = [
     "libbrillo",
     "libchrome",
