--- a/metrics/memd/Cargo.toml
+++ b/metrics/memd/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.2"
+crossbeam-channel = "0.5"
 dbus = "0.9"
 env_logger = { version = "0.9", default-features = false }
 libc = "0.2.40"
