chromeos-config: Add has-ec-component-manifest
To enhance the probe-ability of EC components (go/ec-comp-probe), add
has-ec-component-manifest property to cros-config.
This property will be used when packing the firmware images to create
the firmware updater.

BUG=b:328176346
TEST=./regen.py && ./run_tests

Cq-Depend: chromium:5369421,chromium:5369422
Change-Id: If9e970d3e583596fd939493eb784c0b9728081aa
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5369221
Reviewed-by: Jack Rosenthal <jrosenth@chromium.org>
Commit-Queue: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Chung-sheng Wu <chungsheng@google.com>
Reviewed-by: Yu-Ping Wu <yupingso@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>

--- a/chromeos-config/test_data/test.yaml
+++ b/chromeos-config/test_data/test.yaml
@@ -68,6 +68,7 @@ some_base_config: &some_base_config
 
     ec-ro-image: "bcs://Some_EC.1111.11.1.tbz2"
     ec-rw-image: "bcs://Some_EC_RW.1111.11.1.tbz2"
+    has-ec-component-manifest: True
     main-ro-image: "bcs://Some.1111.11.1.tbz2"
     main-rw-image: "bcs://Some_RW.1111.11.1.tbz2"
   fingerprint:
