libarc-attestation: Add mocks for unit testing
This CL adds mocks for LibArc-Attestation
so that these could be used by ARC KeyMint
in their unit-tests.

BUG=b:329661468
TEST=emerge-brya chromeos-base/arc-keymint
TEST=emerge-brya chromeos-base/libarc-attestation
TEST=cros_workon_make --board=brya chromeos-base/arc-keymint --test

Change-Id: I3bfca96177741d1d67ef325ba51479010d2a721f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5366909
Reviewed-by: Yao Li <yaohuali@google.com>
Commit-Queue: Vaibhav Raheja <vraheja@chromium.org>
Tested-by: Vaibhav Raheja <vraheja@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>

--- a/libarc-attestation/BUILD.gn
+++ b/libarc-attestation/BUILD.gn
@@ -67,6 +67,7 @@ source_set("libarc-attestation-source") {
   sources = [
     "lib/interface.cc",
     "lib/manager.cc",
+    "lib/manager_base.cc",
     "lib/provisioner.cc",
     "lib/version_attester.cc",
   ]
