metrics: First sync with Chromium Structured Metrics library.
This commit adds a new test target for structured metrics.

BUG=None
TEST=CQ
CLEANUP=syncing, lint is passing in Chromium
GitOrigin-RevId: 80988435e5099b2821adca3c64cb2f8f72019c39

Cq-Depend: chromium:5386362
Change-Id: I72df335f8113ec73f33b52b3d87d92a2facb1934
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5379205
Tested-by: Jong Ahn <jongahn@chromium.org>
Commit-Queue: Jong Ahn <jongahn@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>

--- a/metrics/BUILD.gn
+++ b/metrics/BUILD.gn
@@ -32,6 +32,7 @@ group("all") {
       ":persistent_integer_test",
       ":timer_test",
       ":upload_service_test",
+      "//metrics/structured:structured_metrics_test",
     ]
   }
   if (use.passive_metrics && use.test) {
