--- a/metrics/structured/BUILD.gn
+++ b/metrics/structured/BUILD.gn
@@ -8,6 +8,14 @@ import("//common-mk/proto_library.gni")
 _event_output_dir = "${root_gen_dir}/include/metrics/structured"
 _xml_file = "sync/structured.xml"
 
+pkg_config("target_defaults_pkg_deps") {
+  pkg_deps = [
+    "libbrillo",
+    "libchrome",
+    "protobuf-lite",
+  ]
+}
+
 proto_library("storage") {
   proto_in_dir = "./proto"
   proto_out_dir = "include/metrics/structured/proto"
@@ -15,6 +23,13 @@ proto_library("storage") {
     "${proto_in_dir}/storage.proto",
     "${proto_in_dir}/structured_data.proto",
   ]
+  use_pic = true
+}
+
+proto_library("libsm_proto") {
+  proto_in_dir = "lib/proto"
+  proto_out_dir = "include/metrics/structured/lib/proto"
+  sources = [ "${proto_in_dir}/key.proto" ]
   use_pic = true
 }
 
@@ -43,13 +58,32 @@ action("gen_structured_events") {
   ]
 }
 
-shared_library("libstructuredmetrics") {
-  pkg_deps = [
-    "libbrillo",
-    "libchrome",
-    "protobuf-lite",
+# Library imported from Chromium. Only to be used for building the shared
+# "libstructuredmetrics" library.
+source_set("libsm") {
+  sources = [
+    "lib/event_storage.h",
+    "lib/histogram_util.cc",
+    "lib/histogram_util.h",
+    "lib/key_data.cc",
+    "lib/key_data.h",
+    "lib/key_data_file_delegate.cc",
+    "lib/key_data_file_delegate.h",
+    "lib/key_data_provider.cc",
+    "lib/key_data_provider.h",
+    "lib/key_util.cc",
+    "lib/key_util.h",
+    "lib/persistent_proto.h",
+    "lib/persistent_proto_internal.cc",
+    "lib/persistent_proto_internal.h",
   ]
 
+  configs += [ ":target_defaults_pkg_deps" ]
+
+  deps = [ ":libsm_proto" ]
+}
+
+shared_library("libstructuredmetrics") {
   sources = [
     "c_structured_metrics.cc",
     "event_base.cc",
@@ -70,11 +104,37 @@ shared_library("libstructuredmetrics") {
   # Also include the generated event files.
   sources += get_target_outputs(":gen_structured_events")
 
+  configs += [ ":target_defaults_pkg_deps" ]
+
   deps = [
     ":gen_structured_events",
+    ":libsm_proto",
     ":storage",
     "//metrics:libmetrics",
   ]
+}
+
+if (use.test) {
+  pkg_config("libchrome_test_config") {
+    pkg_deps = [ "libchrome-test" ]
+  }
+  executable("structured_metrics_test") {
+    sources = [
+      "lib/key_data_file_delegate_test.cc",
+      "lib/persistent_proto_test.cc",
+    ]
+    configs += [
+      "//common-mk:test",
+      ":libchrome_test_config",
+      ":target_defaults_pkg_deps",
+    ]
+    run_test = true
+    deps = [
+      ":libsm",
+      ":libsm_proto",
+      "//common-mk/testrunner:testrunner",
+    ]
+  }
 }
 
 # Install missing headers using new approach to be able to use mock recorder
