init: preload-network: Add kill timeout
After crrev/c/5247928, we're applying the default (5 second) timeout to
the preload-network.conf post-stop script. This script purposely waits
up to 30 seconds for a device, so that timeout isn't correct. Give it
the full 30 seconds, plus some padding.

BUG=b:329869866
TEST=platform.BootPerf / seconds_kernel_to_wifi_registered

Change-Id: Id7b2a87367c9a2b81a382413738b800849389d7e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5375207
Tested-by: Stephen Boyd <swboyd@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Commit-Queue: Brian Norris <briannorris@chromium.org>

--- a/init/upstart/preload-network.conf
+++ b/init/upstart/preload-network.conf
@@ -36,6 +36,8 @@ start on started boot-services
 #
 # https://dev.chromium.org/chromium-os/chromiumos-design-docs/boot-design#TOC-Failsafe-service
 stop on started failsafe
+# 'post-stop' may sleep for up to 30 seconds. Give some margin for other work.
+kill timeout 40
 
 env drvfile=/var/lib/preload-network-drivers
 
