--- a/cryptohome/etc/org.chromium.UserDataAuth.conf
+++ b/cryptohome/etc/org.chromium.UserDataAuth.conf
@@ -263,6 +263,9 @@
     <allow receive_sender="org.chromium.UserDataAuth"
            receive_interface="org.chromium.UserDataAuthInterface"
            receive_member="AuthenticateAuthFactorCompleted"/>
+    <allow receive_sender="org.chromium.UserDataAuth"
+           receive_interface="org.chromium.UserDataAuthInterface"
+           receive_member="RemoveCompleted"/>
   </policy>
 
   <policy context="default">
@@ -273,5 +276,8 @@
     <deny receive_sender="org.chromium.UserDataAuth"
           receive_interface="org.chromium.UserDataAuthInterface"
           receive_member="AuthenticateStarted"/>
+    <deny receive_sender="org.chromium.UserDataAuth"
+          receive_interface="org.chromium.UserDataAuthInterface"
+          receive_member="RemoveCompleted"/>
   </policy>
 </busconfig>
