vm_tools: concierge: Append --pvclock crosvm arg on x86 ARCVM
virtio-pvclock should be enabled for x86 ARCVM to make the kernel clocks
behave nicely as the userland expects. Currently, virtio-pvclock is only
available on x86 so enable it only on such cases.

BUG=b:295256641
TEST=tast run ${DUT} arc.Suspend.s10c2

Cq-Depend: 5049521, 5369748, 4297398
Change-Id: I2ad10b5096844f31303c0e76ea8d476be11c3c6b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5373959
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Tested-by: Hikaru Nishida <hikalium@chromium.org>
Commit-Queue: Hikaru Nishida <hikalium@chromium.org>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -111,6 +111,10 @@ static_library("libconcierge") {
     # TODO(b/293801301): Add PCI hotplug support for aarch64.
     # PCI hotplug is only enabled on x86_64 architecture.
     "USE_PCI_HOTPLUG_SLOTS=${use.amd64}",
+
+    # TODO(b/295256641): Add PvClock support for aarch64.
+    # Currently PvClock is only enabled on x86_64 architecture.
+    "USE_VIRTIO_PVCLOCK=${use.amd64}",
   ]
 
   cflags_cc = [
