camera: Add post-stop signal handling
Upstart treats a failing post-stop process as fatal, and avoids
respawning the service out of an abundance of caution. crrev/c/5247928
added new ways for post-stop to fail -- particularly, that if it takes
longer than the timeout (5 seconds, by default), we send it SIGTERM.

To address this:

1. lengthen the timeout, so we're unlikely to hit it
2. add a "exit 0" SIGTERM handler, so it's not treated as a failure if
   we ever do reach this timeout

BUG=b:330056158
TEST=`pkill -SIGABRT cros_camera_ser`, `status cros-camera` still
      respawns
TEST=no more:
     "init: cros-camera post-stop process (xxx) killed by TERM signal"

Change-Id: I4099e5a7ae283292ea6ccf6e83e3820e90f116bf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5376910
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: Wei Lee <wtlee@chromium.org>

--- a/camera/hal_adapter/init/cros-camera.conf
+++ b/camera/hal_adapter/init/cros-camera.conf
@@ -27,6 +27,8 @@ env ANGLE_LIBRARY_PATH=/opt/google/chrome
 # Don't respawn too aggressively so kernel has some room to breathe and
 # initialize cameras.
 env RESPAWN_DELAY=5
+# Give the post-stop process a bit more than 5 seconds to terminate.
+kill timeout 8
 
 # cros_camera_service provides camera service to both Chrome and ARC++:
 # Chrome hosts the CameraHalDispatcher Mojo proxy; cros_camera_service forks a
@@ -64,6 +66,9 @@ post-start script
 end script
 
 post-stop script
+  # If post-stop is somehow killed for timeout, treat that as a clean exit.
+  trap "exit 0" TERM
+
   goal=$(status cros-camera | awk '{split($2, a, "/"); print a[1]}')
   if [ "${goal}" = "start" ]; then
     # Sleep only if it's respawning, so we don't need to wait when doing `stop
