--- a/iioservice/daemon/init/iioservice.conf
+++ b/iioservice/daemon/init/iioservice.conf
@@ -24,6 +24,9 @@ oom score -100
 limit as 200000000 unlimited
 
 post-stop script
+  # If post-stop is somehow killed for timeout, treat that as a clean exit.
+  trap "exit 0" TERM
+
   goal=$(status iioservice | awk '{split($2, a, "/"); print a[1]}')
   if [ "${goal}" = "start"  ]; then
     # Sleep only if it's respawning, so we don't need to wait when doing `stop
