hps: Add post-stop signal handling
Upstart treats a failing post-stop process as fatal, and avoids
respawning the service out of an abundance of caution. crrev/c/5247928
added new ways for post-stop to fail -- particularly, that if it takes
longer than the timeout (5 seconds, by default), we send it SIGTERM.

To address this:

1. lengthen the timeout, so we're unlikely to hit it
2. add a "exit 0" SIGTERM handler, so it's not treated as a failure if
   we ever do reach this timeout

BUG=b:330056158
TEST=`pkill -SIGABRT hpsd`, `status hpsd` still
      respawns

Change-Id: I9d375cbb605488ca72231def2491712e1c61ad29
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5376911
Tested-by: Brian Norris <briannorris@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Reviewed-by: Jim Pollock <jmpollock@chromium.org>

--- a/hps/daemon/init/hpsd.conf
+++ b/hps/daemon/init/hpsd.conf
@@ -18,6 +18,10 @@ respawn limit 10 600
 # hpsd exit(5)s only when an update fails to install
 normal exit 5
 
+env RESPAWN_DELAY=5
+# Give the post-stop process a bit more than 5 seconds to terminate.
+kill timeout 8
+
 # Make hpsd killable, because if it has a leak it's better to
 # restart it than to OOM-panic.
 oom score -100
@@ -28,11 +32,14 @@ pre-start script
 end script
 
 post-stop script
+  # If post-stop is somehow killed for timeout, treat that as a clean exit.
+  trap "exit 0" TERM
+
   goal=$(status "${UPSTART_JOB}" | awk '{split($2, a, "/"); print a[1]}')
   if [ "${goal}" = "start" ]; then
     # Sleep only if it's respawning, so we don't need to wait when doing `stop`
     # in tests or manually.
-    sleep 5
+    sleep "${RESPAWN_DELAY}"
   fi
 end script
 
