crash: Include GSC console logs with GSC crashes.
BUG=b:308010489
TEST=cros_run_unit_tests --board=betty --packages crash-reporter
TEST=/sbin/crash_reporter --boot_collect

Change-Id: I2698e5e2a3994cf4d2c0542a4bb52f673769a25b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5379214
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Tested-by: Brian Granaghan <granaghan@google.com>
Commit-Queue: Brian Granaghan <granaghan@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -468,6 +468,9 @@ google_security_chip=\
     /usr/sbin/gsctool --any --dauntless --clog; \
     echo "===CCD state==="; \
     /usr/sbin/gsctool --any --dauntless --ccd_info; \
+    echo "===console log==="; \
+    /usr/bin/gsclog; \
+    tail --bytes=100000 /var/log/gsc.log; \
   else \
     echo "Unsupported GSC present."; \
   fi; \
