camera: Add CaptureResultSequencer and use it in EffectsSM
Add CaptureResultSequencer helper class that can be used in stream
manipulators to ensure returned buffers on each stream are in order.
Use it in EffectsStreamManipulator to sequence the output buffers from
effects pipeline, effects skipped, and privacy switch shuttered paths.

BUG=b:316088423
TEST=FEATURES=test emerge-brya cros-camera-libs
TEST=cros_effects_sm_tests
TEST=Toggle camera mute button quickly with effects enabled.

Change-Id: I4a3901fc929122aa18e92afe6a2f5550c60fdf72
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5380578
Commit-Queue: Ren-Pei Zeng <kamesan@chromium.org>
Reviewed-by: Imran Ziad <imranziad@chromium.org>
Tested-by: Ren-Pei Zeng <kamesan@chromium.org>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -39,6 +39,7 @@ group("all") {
       ":camera_buffer_pool_test",
       ":camera_face_detection_test",
       ":camera_hal3_helpers_test",
+      ":capture_result_sequencer_test",
       ":cbm_test",
       ":embed_file_toc_test",
       ":future_test",
@@ -320,6 +321,7 @@ source_set("stream_manipulator") {
   ]
 
   deps = [
+    ":capture_result_sequencer",
     ":jpeg",
     "//camera/gpu:gpu_resources",
   ]
@@ -344,6 +346,15 @@ source_set("stream_manipulator") {
   if (use.camera_feature_super_res) {
     deps += [ "//camera/features/super_resolution" ]
   }
+}
+
+source_set("capture_result_sequencer") {
+  sources = [ "//camera/common/capture_result_sequencer.cc" ]
+  public_configs = [ ":target_defaults" ]
+  public_deps = [
+    ":base",
+    ":mojo_base",
+  ]
 }
 
 shared_library("libcros_camera") {
@@ -444,6 +455,14 @@ if (use.test) {
     ]
     configs += [ ":target_defaults_test" ]
     deps = [ ":tracing" ]
+    run_test = true
+  }
+
+  executable("capture_result_sequencer_test") {
+    sources = [ "//camera/common/capture_result_sequencer_test.cc" ]
+    configs += [ ":target_defaults_test" ]
+    defines = [ "EGL_NO_X11" ]
+    deps = [ ":capture_result_sequencer" ]
     run_test = true
   }
 
