--- a/diagnostics/cros_healthd/routines/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/BUILD.gn
@@ -36,6 +36,7 @@ source_set("utils") {
   sources = [
     "base_routine_control.cc",
     "diag_routine_with_status.cc",
+    "noninteractive_routine_control.cc",
     "routine_adapter.cc",
     "routine_service.cc",
     "simple_routine.cc",
